--- a/PersonelKayitProjesi/PersonelKayitProjesi.csproj
+++ b/PersonelKayitProjesi/PersonelKayitProjesi.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,6 +53,18 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmGrafikler.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGrafikler.Designer.cs">
+      <DependentUpon>FrmGrafikler.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frmİstatistik.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frmİstatistik.Designer.cs">
+      <DependentUpon>Frmİstatistik.cs</DependentUpon>
+    </Compile>
     <Compile Include="PersonelVeriTabaniDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -66,6 +79,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmGrafikler.resx">
+      <DependentUpon>FrmGrafikler.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frmİstatistik.resx">
+      <DependentUpon>Frmİstatistik.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
